// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportPDFForm expect to render without error 1`] = `
<div>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-c-form__label-text"
          >
            Policy
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control pf-m-inline"
      >
        <p
          class=""
          data-ouia-component-id="OUIA-Generated-Text-1"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Policy Test Name
        </p>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-c-form__label-text"
          >
            System data to include
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Non-compliant systems"
            checked=""
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-1"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="non-compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="non-compliant-systems-export-setting"
          >
            Non-compliant systems
          </label>
        </div>
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Systems with unsupported configuration"
            checked=""
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-2"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="unsupported-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="unsupported-systems-export-setting"
          >
            Systems with unsupported configuration
          </label>
        </div>
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Compliant systems"
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-3"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="compliant-systems-export-setting"
          >
            Compliant systems
          </label>
        </div>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-c-form__label-text"
          >
            Rule data to include
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Rule data to include"
            checked=""
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-4"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="failed-rules-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="failed-rules-export-setting"
          >
            Top failed rules (Up to 10)
          </label>
        </div>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-c-form__label-text"
          >
            User notes (optional)
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <textarea
          aria-invalid="false"
          aria-label="User notes (optional)"
          class="pf-c-form-control"
        >
          NOTE
        </textarea>
        
      </div>
    </div>
  </form>
</div>
`;

exports[`ExportPDFForm expect to render without error with different export settings 1`] = `
<div>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-c-form__label-text"
          >
            Policy
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control pf-m-inline"
      >
        <p
          class=""
          data-ouia-component-id="OUIA-Generated-Text-2"
          data-ouia-component-type="PF4/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Policy Test Name
        </p>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="simple-form-checkbox-group"
        >
          <span
            class="pf-c-form__label-text"
          >
            System data to include
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Non-compliant systems"
            checked=""
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-5"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="non-compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="non-compliant-systems-export-setting"
          >
            Non-compliant systems
          </label>
        </div>
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Systems with unsupported configuration"
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-6"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="unsupported-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="unsupported-systems-export-setting"
          >
            Systems with unsupported configuration
          </label>
        </div>
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Compliant systems"
            checked=""
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-7"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="compliant-systems-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="compliant-systems-export-setting"
          >
            Compliant systems
          </label>
        </div>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-c-form__label-text"
          >
            Rule data to include
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <div
          class="pf-c-check"
        >
          <input
            aria-invalid="false"
            aria-label="Rule data to include"
            checked=""
            class="pf-c-check__input"
            data-ouia-component-id="OUIA-Generated-Checkbox-8"
            data-ouia-component-type="PF4/Checkbox"
            data-ouia-safe="true"
            id="failed-rules-export-setting"
            type="checkbox"
          />
          <label
            class="pf-c-check__label"
            for="failed-rules-export-setting"
          >
            Top failed rules (Up to 10)
          </label>
        </div>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="checkbox01"
        >
          <span
            class="pf-c-form__label-text"
          >
            User notes (optional)
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <textarea
          aria-invalid="false"
          aria-label="User notes (optional)"
          class="pf-c-form-control"
        >
          NOTE
        </textarea>
        
      </div>
    </div>
  </form>
</div>
`;
